@@ -11,6 +11,12 @@
   size_t alloc_size = 256;
   const char **argv = malloc(sizeof (const char *) * alloc_size);
   char *const *envp;
+  if (!argv) {
+	pseudo_debug(1, "execle failed: couldn't allocate memory for %lu arguments\n",
+		(unsigned long) alloc_size);
+	errno = ENOMEM;
+	return -1;
+  }
 
   argv[i++] = arg;
 
@@ -19,6 +25,12 @@
 	if ( i > alloc_size - 1 ) {
 		alloc_size = alloc_size + 256;
 		argv = realloc(argv, sizeof (const char *) * alloc_size);
+		if (!argv) {
+			pseudo_debug(1, "execle failed: couldn't allocate memory for %lu arguments\n",
+				(unsigned long) alloc_size);
+			errno = ENOMEM;
+			return -1;
+		}
 	}
   }
   envp = va_arg (ap, char *const *);
