@@ -1,5 +1,7 @@
 2010-08-16:
 	* (rp) Fix ld_preload/ld_library_path mixup.
+	* (seebs) Handle failed allocations.
+	* (seebs) Fix logic for dropping empty LD_PRELOAD.
 
 2010-08-12:
 	* (seebs) Fix install of libpseudo so the plain library is created
